force-app/main/default/objects/Visite_Commerciale__c/Visite_Commerciale__c.object-meta.xml
<CustomObject>
    <label>Visite Commerciale</label>
    <nameField>
        <displayFormat>VC-{00000}</displayFormat>
        <label>Numéro de Visite</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visites Commerciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>