force-app/main/default/objects/Visite_Commerciale__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte Associé</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visites Commerciales</relationshipLabel>
    <relationshipName>Visites_Commerciales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>