force-app/main/default/objects/Visite_Commerciale__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Associé</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visites Commerciales</relationshipLabel>
    <relationshipName>Visites_Commerciales</relationshipName>
    <type>Lookup</type>
</CustomField>