force-app/main/default/objects/Visite_Commerciale__c/fields/CR_Formated__c.field-meta.xml
<CustomField>
    <fullName>CR_Formated__c</fullName>
    <label>CR Formaté</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>