force-app/main/default/objects/Visite_Commerciale__c/fields/CR_Transcrit__c.field-meta.xml
<CustomField>
    <fullName>CR_Transcrit__c</fullName>
    <label>CR Transcrit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>