force-app/main/default/objects/Visite_Commerciale__c/fields/D_tails_Client_le__c.field-meta.xml
<CustomField>
    <fullName>D_tails_Client_le__c</fullName>
    <description>Qui est le client ? Quel est le besoin ?</description>
    <inlineHelpText>Détailler le contexte clientèle pour le prompt. Quelle industrie ? Quel type de besoin... ? Points saillants à mettre en avant dans le plan de visite (250 car max)</inlineHelpText>
    <label>Détails Clientèle</label>
    <type>TextArea</type>
</CustomField>