force-app/main/default/objects/Visite_Commerciale__c/fields/D_tails_Commercial__c.field-meta.xml
<CustomField>
    <fullName>D_tails_Commercial__c</fullName>
    <description>Qui est le commercial ? Quel secteur, entreprise, produit... ?</description>
    <inlineHelpText>Contextualiser pour personnaliser le vocabulaire et méthodologie du secteur</inlineHelpText>
    <label>Détails Commercial</label>
    <type>TextArea</type>
</CustomField>