force-app/main/default/objects/Visite_Commerciale__c/fields/Date_et_Heure_de_la_Visite__c.field-meta.xml
<CustomField>
    <fullName>Date_et_Heure_de_la_Visite__c</fullName>
    <label>Date et Heure de la Visite</label>
    <type>DateTime</type>
</CustomField>