force-app/main/default/objects/Visite_Commerciale__c/fields/Dur_e_en_minutes__c.field-meta.xml
<CustomField>
    <fullName>Dur_e_en_minutes__c</fullName>
    <label>Durée (en minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>