force-app/main/default/objects/Visite_Commerciale__c/fields/ID_v_nement_Associ__c.field-meta.xml
<CustomField>
    <fullName>ID_v_nement_Associ__c</fullName>
    <label>ID Événement Associé</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>