force-app/main/default/objects/Visite_Commerciale__c/fields/Lien_v_nement__c.field-meta.xml
<CustomField>
    <fullName>Lien_v_nement__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  ID_v_nement_Associ__c , &quot;Voir l&apos;événement&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien Événement</label>
    <type>Text</type>
</CustomField>