force-app/main/default/objects/Visite_Commerciale__c/fields/Plan_Visite__c.field-meta.xml
<CustomField>
    <fullName>Plan_Visite__c</fullName>
    <label>Plan Visite</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>