force-app/main/default/objects/Visite_Commerciale__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>IF(
  Date_et_Heure_de_la_Visite__c &lt; NOW(),
    IMAGE(&apos;/img/samples/light_green.gif&apos;, &apos;Effectuée&apos;, 32, 32),
    IMAGE(&apos;/img/samples/light_yellow.gif&apos;, &apos;Planifiée&apos;, 32, 32)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>