force-app/main/default/objects/Visite_Commerciale__c/fields/Type_Visite__c.field-meta.xml
<CustomField>
    <fullName>Type_Visite__c</fullName>
    <description>Quel outil de visite ? Mobilité ? Réunion ? Morcelée avec plusieurs participants ?</description>
    <inlineHelpText>Détailler comment la &quot;visite&quot; se déroule ? 1:1 sur site, en réunion, au téléphone...</inlineHelpText>
    <label>Type Visite</label>
    <type>TextArea</type>
</CustomField>