force-app/main/default/objects/Visite_Commerciale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CR_Transcrit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>